# cups-print-gateway

./: .gitignore  README.md  environment.yml  main.py  package-lock.json  package.json  pyproject.toml  vite.config.js
docs/: setup-and-printer.md
frontend/: index.html
frontend/src/: main.jsx  styles.css
src/print_gateway/: __init__.py  agent.py  config.py  conversion.py  cups.py  db.py  security.py  server.py  states.py  storage.py
tests/: test_cups.py  test_server.py
