[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "print-gateway"
version = "0.1.0"
description = "Remote print gateway with a FastAPI server and Linux CUPS agent."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "python-multipart>=0.0.9",
  "requests>=2.32.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
]

[project.scripts]
print-gateway-server = "print_gateway.server:main"
print-gateway-agent = "print_gateway.agent:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
print_gateway = ["web/dist/index.html", "web/dist/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
